kajit/tests/snapshots/generated_synthetic__generated_postreg_disasm_json_tuple_pair_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: disasm
---
> sub sp, sp, #0x40
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x8
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1c
  str x19, [x22]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x40
  ret
