kajit/tests/snapshots/generated_synthetic__generated_postreg_disasm_json_vec_scalar_large_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: disasm
---
> sub sp, sp, #0xf0
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x5e4
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xa0]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x5a0
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x588
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x24
  b.ne $+0x18
  add x19, x19, #0x1
  mov x11, x23
  mov x11, x23
  ldr x15, [sp, #0xa0]
  b $+0x528
  mov x9, #<imm>
  mov x25, x9
  str x25, [sp, #0x68]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x26, x9
  str x26, [sp, #0x70]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x78]
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0x98]
  cmp x25, x11
  cset x24, ne
  str x24, [sp, #0x80]
  mov x11, x23
  add x9, sp, #0x50
  mov x24, x9
  add x9, sp, #0x58
  mov x26, x9
  str x19, [x22]
  mov x0, x22
  mov x1, x24
  mov x2, x26
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x4d4
  ldr x9, [sp, #0x50]
  mov x24, x9
  ldr x9, [sp, #0x58]
  mov x25, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x49c
  ldr x23, [sp, #0x70]
  ldr x26, [sp, #0x78]
  mov x0, x24
  mov x1, x25
  mov x2, x23
  mov x3, x26
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  ldr x11, [sp, #0x80]
  mov x12, x24
  and x12, x12, x11
  cbnz x12, $+0x14
  ldr x23, [sp, #0xd8]
  mov x24, x23
  ldr x11, [sp, #0x68]
  b $+0x2d4
  ldr x23, [sp, #0xd8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x424
  add x9, sp, #0x60
  mov x11, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0x90]
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  add x2, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x3d4
  mov x11, x23
  orr x11, x11, x25
  str x11, [sp, #0x88]
  ldr x9, [sp, #0x60]
  mov x15, x9
  cmp x15, x24
  b.ne $+0x38
  add x19, x19, #0x1
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, x23
  str x9, [x21, #0x8]
  mov x9, x25
  str x9, [x21, #0x10]
  mov x9, x25
  str x9, [x21]
  ldr x23, [sp, #0x88]
  b $+0x1fc
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xb0]
  mov x9, #<imm>
  mov x13, x9
  str x13, [sp, #0xc0]
  str x19, [x22]
  mov x0, x22
  mov x1, x23
  mov x2, x11
  mov x3, x12
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x31c
  mov x9, x0
  mov x24, x9
  mov x9, x21
  mov x11, x9
  str x11, [sp, #0xa8]
  mov x9, x24
  mov x21, x9
  mov x11, x24
  mov x13, x25
  mov x12, x23
  cmp x13, x12
  cset x14, ne
  ldr x15, [sp, #0xb0]
  mov x23, x13
  add x23, x23, x15
  str x23, [sp, #0xb8]
  ldr x15, [sp, #0xc0]
  mov x23, x24
  add x23, x23, x15
  str x23, [sp, #0xc8]
  add x9, sp, #0x60
  mov x15, x9
  str x15, [sp, #0xd0]
  cbnz x14, $+0x78
  mov x9, #<imm>
  mov x15, x9
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x23, x9
  mov x25, x12
  lsl x25, x25, x15
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  mov x2, x13
  mov x3, x12
  mov x4, x25
  mov x5, x14
  mov x6, x23
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x260
  mov x9, x0
  mov x23, x9
  mov x26, x23
  mov x23, x25
  mov x23, x25
  b $+0xc
  mov x26, x11
  mov x23, x12
  mov x9, x24
  mov x21, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x210
  ldr x14, [sp, #0xd0]
  str x19, [x22]
  mov x0, x22
  mov x1, x14
  add x2, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1e0
  ldr x9, [sp, #0x60]
  mov x24, x9
  ldr x14, [sp, #0xb0]
  cmp x24, x14
  cset x25, ne
  mov x11, x26
  ldr x12, [sp, #0xc8]
  mov x24, x12
  ldr x12, [sp, #0xb8]
  mov x13, x12
  mov x12, x23
  cbnz x25, $+0x4d4
  ldr x25, [sp, #0xa8]
  mov x9, x25
  mov x21, x9
  mov x9, x11
  str x9, [x21, #0x8]
  mov x9, x13
  str x9, [x21, #0x10]
  mov x9, x12
  str x9, [x21]
  mov x24, x23
  ldr x26, [sp, #0x90]
  mov x11, x26
  cbnz x11, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x154
  mov x23, x24
  mov x23, x24
  b $+0x8
  mov x23, x24
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x11c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x104
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xec
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x12, [sp, #0x98]
  cmp x11, x12
  cset x13, ne
  cbnz x13, $+0x1c
  mov x9, #<imm>
  mov x11, x9
  mov x24, x11
  mov x25, x23
  mov x25, x23
  b $+0x70
  mov x9, #<imm>
  mov x24, x9
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x1c
  mov x9, #<imm>
  mov x24, x9
  mov x26, x24
  mov x11, x23
  mov x11, x23
  b $+0x3c
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x64
  mov x9, #<imm>
  mov x11, x9
  mov x26, x11
  mov x11, x23
  mov x24, x26
  mov x25, x11
  mov x23, x25
  cbnz x24, $+0x380
  mov x11, x23
  and x11, x11, x15
  cmp x11, x15
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xf0
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xf0
  ret
